syntax = "proto3";

option csharp_namespace = "KBA.Framework.Grpc.Permissions";

package permissions;

// Service de gestion des permissions
service PermissionService {
  // Vérifie si un utilisateur a une permission
  rpc CheckPermission (CheckPermissionRequest) returns (CheckPermissionResponse);
  
  // Récupère toutes les permissions d'un utilisateur
  rpc GetUserPermissions (GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
  
  // Accorde une permission à un utilisateur
  rpc GrantPermission (GrantPermissionRequest) returns (GrantPermissionResponse);
  
  // Révoque une permission d'un utilisateur
  rpc RevokePermission (RevokePermissionRequest) returns (RevokePermissionResponse);
}

// Messages pour CheckPermission
message CheckPermissionRequest {
  string user_id = 1;
  string permission_name = 2;
  optional string tenant_id = 3;
  string correlation_id = 4;
}

message CheckPermissionResponse {
  bool is_granted = 1;
  string permission_name = 2;
  string granted_by = 3;
}

// Messages pour GetUserPermissions
message GetUserPermissionsRequest {
  string user_id = 1;
  optional string tenant_id = 2;
  string correlation_id = 3;
}

message GetUserPermissionsResponse {
  repeated PermissionGrant permissions = 1;
}

message PermissionGrant {
  string id = 1;
  string tenant_id = 2;
  string permission_name = 3;
  string provider_name = 4;
  string provider_key = 5;
  string granted_at = 6; // ISO 8601 format
}

// Messages pour GrantPermission
message GrantPermissionRequest {
  string user_id = 1;
  string permission_name = 2;
  optional string tenant_id = 3;
  string provider_name = 4;
  string provider_key = 5;
}

message GrantPermissionResponse {
  bool success = 1;
  string message = 2;
  PermissionGrant permission = 3;
}

// Messages pour RevokePermission
message RevokePermissionRequest {
  string user_id = 1;
  string permission_name = 2;
  optional string tenant_id = 3;
  string provider_name = 4;
  string provider_key = 5;
}

message RevokePermissionResponse {
  bool success = 1;
  string message = 2;
}
